--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <div class="container">
                             <div class="row justify-content-start">
                                 <div class="col-10 col-lg-8">
-                                    <h1 class="display-2 text-white animated slideInDown mb-4">Make A Brighter Future For Your Child</h1>
+                                    <h1 class="display-2 text-white animated slideInDown mb-4">Wellington Valley International School</h1>
                                     <p class="fs-5 fw-medium text-white mb-4 pb-2">Make A Brighter Future For Your Child With Innovative Learning Style</p>
                                     <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5 me-3 animated slideInLeft">Admissions Open</a>
                                     <a href="" class="btn btn-dark rounded-pill py-sm-3 px-sm-5 animated slideInRight">Our Classes</a>
